--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "My App",
-  "short_name": "My App",
-  "description": "My App description",
+  "name": "AntiOfficial",
+  "short_name": "AntiOfficial",
+  "description": "AntiOfficial description",
   "icons": [
     {
       "src": "images/manifest/icon-192x192.png",
@@ -14,8 +14,8 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/",
+  "start_url": "/index.html",
   "display": "standalone",
-  "theme_color": "#3f51b5",
-  "background_color": "#3f51b5"
+  "theme_color": "#37474F",
+  "background_color": "#37474F"
 }
